speeding it up